--- a/src/pages/HomePage/index.css
+++ b/src/pages/HomePage/index.css
@@ -65,13 +65,12 @@
 
 .body-desc-text {
   color: #000;
-  font-weight: 300;
-  letter-spacing: .5px;
+  font-weight: 350;
   line-height: 24px;
 }
 
 .home-body {
-  height: 300px;
+  height: 15rem;
   overflow-y: auto;
 }
 
@@ -98,4 +97,39 @@ background: lightgrey;
 
 .copy-icon:hover {
   background: url("../../img/copy-green.svg") no-repeat;
+}
+
+.inputFileName::after {
+  content: attr(fileName)
+}
+
+.inputFileButton {
+  /* position: absolute; */
+  width: 9rem;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  height: 100%;
+  background-color: #06cc80;
+  color: #fff;
+  border: none;
+  border-collapse: collapse;
+  /* display: none; */
+}
+
+.inputFileButton:focus, .inputFileButton:active {
+  border: none;
+  outline: none;
+}
+
+.inputFileButton::before {
+  content: "UPLOAD";
+  font-weight: 500;
+}
+
+@media only screen and (max-width: 576px) {
+  .p-style {
+    padding-right: 0;
+    padding-bottom: 1rem;
+  }
 }
