--- a/src/pages/HomePage/index.css
+++ b/src/pages/HomePage/index.css
@@ -127,6 +127,22 @@ background: lightgrey;
   font-weight: 500;
 }
 
+#popover-positioned-top {
+  animation: MoveUpDown 1s linear infinite;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+@keyframes MoveUpDown {
+  0%, 100% {
+    bottom: 0;
+  }
+  50% {
+    bottom: 5px;
+  }
+}
+
 @media only screen and (max-width: 576px) {
   .p-style {
     padding-right: 0;
